src/objects/Daily_Vendor_Publication_Data__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Before_GST__c</fullName>
        <label>Amount Before GST</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Non_Special_Delivery__c</fullName>
        <label>Commission (Non-Special Delivery)</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Special_Delivery__c</fullName>
        <label>Commission (Special Delivery)</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copies_Non_Special_Delivery__c</fullName>
        <label>Copies (Non-Special Delivery)</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copies_Special_Delivery__c</fullName>
        <label>Copies (Special Delivery)</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Amount__c</fullName>
        <label>GST Amount</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insertion__c</fullName>
        <label>Insertion</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Credit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pagination__c</fullName>
        <label>Pagination</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Daily Vendor/ Publication Data</relationshipLabel>
        <relationshipName>Daily_Vendor_Publication_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsored_Copies__c</fullName>
        <label>Sponsored Copies</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Credit__c</fullName>
        <label>Total Credit</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>POP Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Consolidation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Daily Vendor/ Publication Data</relationshipLabel>
        <relationshipName>Daily_Vendor_Publication_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Daily Vendor/ Publication Data</label>
    <nameField>
        <label>Daily Vendor/ Publication Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Vendor/ Publication Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>